--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@wix/sdk": "^1.15.17",
     "@wix/stores": "^1.0.415",
+    "isomorphic-dompurify": "^2.23.0",
     "js-cookie": "^3.0.5",
     "next": "^14.2.20",
     "react": "^18",
